--- a/src/components/Header/navbar.module.css
+++ b/src/components/Header/navbar.module.css
@@ -33,7 +33,7 @@
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 2px;
+    gap: 0.5rem;
 }
 
 .nav__item button {
@@ -46,6 +46,8 @@
     color: var(--text-color);
     border: 1px solid transparent;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
 }
 
 .nav__item button:hover {
@@ -55,6 +57,7 @@
 
 
 .nav__button {
+    font-size: var(--font-size-small);
     margin-left: 5px;
 }
 
@@ -120,5 +123,9 @@
         flex-direction: column;
         gap: 15px;
         align-items: center;
+    }
+
+    .nav__list {
+        gap: 0.2rem;
     }
 }
