--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,8 @@ h2 {
 h2 {
   font-size: var(--font-size-medium);
 }
+
+*:focus {
+  outline: none;
+}
+
